<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.example</groupId>
    <artifactId>org-example-project-root</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>java17-project</artifactId>

  <properties>
        <java.version>17</java.version>
        <jdk-toolchain.version>${java.version}</jdk-toolchain.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
  </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>--add-modules</arg>
                            <arb>jdk.incubator.foreign</arb>
                            <arg>--add-exports</arg>
                            <arg>jdk.incubator.foreign=ALL-UNNAMED</arg>
                            <arg>--add-opens</arg>
                            <arg>jdk.incubator.foreign=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>



  <!--  
  <dependencies>
    <dependency>
      <groupId>org.example</groupId>
      <artifactId>java9-project</artifactId>
      <version>${project.version}</version>
    </dependency>
  </dependencies> -->

</project>
